# s2fft

./: .all-contributorsrc  .buildinfo  .clang-format  .clangd  .coveragerc  .gitignore  .gitmodules  .pip_readme.rst  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENCE.txt  LICENSE_EXT.txt  MANIFEST.in  README.md  README.rst  build_s2harmonic.sh  cuda_python_compare.sh  cuda_test.sh  genindex.html  index.html  jax_HEALPIX_Frontend.py  jaxify_transform.ipynb  kernel_compare.sh  notebook_compare_dl.ipynb  notebook_compare_fwd.ipynb  notebook_healpix_phase_shift.ipynb  notebook_healpix_phase_shift.py  notebook_jaxify_dl.py  notebook_jaxify_fwd_compare.ipynb  notebook_jaxify_fwd_compare_results.py  notebook_jaxify_fwd_compare_time.ipynb  notebook_jaxify_fwd_transform_explore.py  notebook_turok_jax.ipynb  notebook_turok_w_wo_jax.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  (+6 more)
.github/: release.yml
.github/workflows/: build.yml  docs.yml  linting.yml  stats.yml  tests.yml
_scripts/: comparer.py  fft_test.py  kernel_test.py  pix2info.py  script.py
_sources/: index.rst.txt
_sources/api/: index.rst.txt  legendre_matrix.rst.txt  logs.rst.txt  transforms.rst.txt  utils.rst.txt
_sources/background/: index.rst.txt
_sources/tutorials/: index.rst.txt
_sources/user_guide/: install.rst.txt
_static/css/: custom_tabs.css
api/: index.html  legendre_matrix.html  logs.html  precompute_transforms.html  quadrature.html  resampling.html  risbo.html  sampling.html  transforms.html  trapani.html  turok.html  turok_jax.html  utils.html  wigner_samples.html  wigner_transform.html
api/base_transforms/: index.html  spin_spherical_transform.html  wigner_transform.html
api/precompute_transforms/: construct.html  custom_ops.html  fourier_wigner.html  index.html  spin_spherical.html  wigner.html
api/recursions/: index.html  price_mcewen.html  risbo.html  risbo_jax.html  trapani.html  turok.html  turok_jax.html
api/sampling/: index.html  spherical_samples.html  wigner_samples.html
api/transforms/: c_backend_spherical.html  index.html  on_the_fly_recursions.html  spin_spherical_transform.html  wigner.html
api/utility/: healpix_ffts.html  index.html  logs.html  quadrature.html  quadrature_jax.html  quadrature_torch.html  resampling.html  resampling_jax.html  resampling_torch.html  rotation.html  signal_generator.html  utils.html
assets/static_notebooks/: example_notebook.html
astro-informatics/s2fft/: README.md
background/: index.html
benchmarks/: README.md  README.rst  bench_run.py  bench_transforms.py  bench_wigner.py  benchmarking.py  plotting.py  precompute_spherical.py  precompute_wigner.py  spherical.py  utils.py  wigner.py
benchmarks/benchmarks/: bench_wigner.py  utils.py
docs/: Makefile  conf.py  index.rst  sampling.rst
docs/api/: index.rst  logs.rst  precompute_transforms.rst  quadrature.rst  resampling.rst  risbo.rst  sampling.rst  transforms.rst  trapani.rst  turok.py  turok_jax.rst  wigner_samples.rst  wigner_transform.rst
docs/benchmarking/: index.rst
docs/tutorials/: example_notebook.nblink  index.rst
docs/user_guide/: install.rst
lib/include/: argparse.hpp  cudastreamhandler.hpp  hresult.h  kernel_helpers.h  kernel_nanobind_helpers.h  logger.hpp  perfostep.hpp  plan_cache.h  s2fft.h  s2fft_callbacks.cuh  s2fft_callbacks.h  s2fft_kernels.h
lib/src/: extensions.cc  fft_test.cu  kernel_test.cu  plan_cache.cc  s2fft.cu  s2fft_callbacks.cu  s2fft_kernels.cu  test.cc  test.cu
logs/: logging.yaml
notebooks/: EGM2008_Topography_flms_L0128.mat  JAX_CUDA_HEALPix.ipynb  JAX_HEALPix_frontend.ipynb  JAX_SSHT_frontend.ipynb  JAX_SSHT_wigner_test.ipynb  custom_gradients.ipynb  equivalence_equiangular_sampling.ipynb  notebook_compare_dl.ipynb  notebook_compare_fwd.ipynb  notebook_fwd_jax_vs_gt.py  notebook_fwd_oom.py  notebook_healpix_fft.py  notebook_healpix_phase_shift.py  notebook_jit_fwd.py  notebook_jit_fwd_reality.py  plot_earth.ipynb  plotting_functions.py  precompute_transforms.ipynb  quad_tests.ipynb  spherical_harmonic_transform.ipynb  spherical_rotation.ipynb  template_notebook.ipynb  timing_tests.ipynb  torch_frontend.ipynb  turok_gpu_test.ipynb  wigner_transform.ipynb
project_name/: logs.py
project_name/tests/: test_logs.py
requirements/: requirements-core.txt  requirements-docs.txt  requirements-notebooks.txt  requirements-plotting.txt  requirements-tests.txt
s2fft/: NFinal_Clenshawlskurtis.py  README.rst  __init__.py  _version.py  angle1.py  default-logging-config.yaml  healpix_ffts.py  logs.py  quadrature.py  quadrature_jax.py  resampling.py  resampling_jax.py  samples.py  sampling.py  transform.py  utils.py
s2fft/base_transforms/: __init__.py  spherical.py  spin_spherical.py  wigner.py
s2fft/experimental/: __init__.py  transforms_healpix.py
s2fft/general_precompute/: __init__.py  construct.py  quadrature_jax.py  resampling_jax.py  spin_spherical.py  wigner.py
s2fft/jax_transforms/: __init__.py  otf_recursions.py  spin_spherical.py  transform.py  wigner.py
s2fft/matrix_precompute/: construct_legendre_matrix.py  precompute_ssht.py
s2fft/precompute/: __init__.py  construct_legendre_matrix.py  ssht_matrix.py  transforms.py
s2fft/precompute_transform/: __init__.py  construct.py  wigner.py  (+1 more)
s2harmonic/: __init__.py  dl.py  logs.py
tests/: conftest.py  test_dl.py  test_fourier_wigner.py  test_healpix_ffts.py  test_helper_functions.py  test_lifting_transforms.py  test_logs.py  test_precomp_spherical.py  test_precomp_wigner.py  test_precompute.py  test_quadrature.py  test_resampling.py  test_samples.py  test_sampling.py  test_signal_generator.py  test_spherical_base.py  test_spherical_custom_grads.py  test_spherical_precompute.py  test_spherical_transform.py  test_torch_wrapper.py  test_transform.py  test_transform_jax.py  test_utils.py  test_wigner.py  test_wigner_base.py  test_wigner_custom_grads.py  test_wigner_precompute.py  test_wigner_recursions.py  test_wigner_samples.py  test_wigner_transform.py  utils.py
tutorials/: example_notebook.html  index.html
user_guide/: install.html
(+1264 files in other folders)
