[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "scikit-build-core >=0.4.3", 
    "nanobind >=1.3.2"
]
build-backend = "scikit_build_core.build"

[project]
authors = [
    {name = "Matthew A. Price"},
    {name = "Jason D. McEwen"},
    {name= "Contributors"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
description = "Differentiable and accelerated spherical transforms with JAX"
keywords = [
]
name = "s2fft"
version = "0.1.0"
readme = ".pip_readme.rst"
requires-python = ">=3.8"
license.file = "LICENSE.txt"
urls.homepage = "https://github.com/astro-informatics/s2fft"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore:FutureWarning",
]

[tool.setuptools]
packages = ["s2fft"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements-core.txt"]}
optional-dependencies.docs = { file = ["requirements/requirements-docs.txt"] }
optional-dependencies.plotting = { file = ["requirements/requirements-plotting.txt"] }
optional-dependencies.tests = { file = ["requirements/requirements-tests.txt"] }

[tool.setuptools.package-data]
s2fft = ["default-logging-config.yaml"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "s2fft/_version.py"
